remove reuseForks false - when possible